use recordtypeid on case

--- a/force-app/main/default/classes/nksGetStoUtilityController.cls
+++ b/force-app/main/default/classes/nksGetStoUtilityController.cls
@@ -142,7 +142,7 @@ public without sharing class nksGetStoUtilityController {
             FROM Case
             WHERE
                 Status IN ('New', 'In progress', 'Reserved')
-                AND RecordType.Id = :recordTypeId
+                AND RecordTypeId = :recordTypeId
                 AND OwnerId = :UserInfo.getUserID()
             ORDER BY CreatedDate DESC
             LIMIT 5
